Fixed styling to be left aligned

--- a/logicgate/styles.css
+++ b/logicgate/styles.css
@@ -1,6 +1,3 @@
-.form-group{
-    display: flex;
-}
-.row{
+.flex-column {
     flex-direction: column;
 }
